# pydantic_markdown

./: .gitignore  README.md  license  pyproject.toml
.github/workflows/: quick_checks.yml  release.yml
pydantic_markdown/: __init__.py  io.py  steps.py  tree.py  writer.py
scripts/: build_wheel.sh
tests/: conftest.py  test_steps.py  test_tree.py  test_writer.py
